--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url="jdbc:postgresql://127.0.0.1:5432/finalncapas"
+spring.datasource.username="postgres"
+spring.datasource.password="postgres"
